[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "icdm-sa"
version = "0.1.0"
description = "Interactive and Explainable Survival Analysis"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "ICDM-SA Team"},
]
keywords = ["survival analysis", "machine learning", "deep learning", "explainable ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "torch>=1.9.0",
    "numpy>=1.19.0",
    "pandas>=1.3.0",
    "scikit-learn>=0.24.0",
    "scikit-survival>=0.18.0",
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
    "tqdm>=4.62.0",
    "easydict>=1.9",
    "lifelines>=0.27.0",
    "scipy>=1.7.0",
]

[project.urls]
"Homepage" = "https://github.com/Kingmaoqin/ICDM-SA"
"Bug Reports" = "https://github.com/Kingmaoqin/ICDM-SA/issues"
"Source" = "https://github.com/Kingmaoqin/ICDM-SA"

[tool.setuptools]
packages = ["icdm_sa"]
include-package-data = true

[tool.setuptools.package-data]
icdm_sa = [
    "datasets/flchain/*.csv",
    "datasets/gabs/*.csv", 
    "datasets/metabric/*.csv",
    "datasets/nwtco/*.csv",
    "datasets/tcga_task3/*.csv",
]